--- a/css_study/project_home/styles/reset.css
+++ b/css_study/project_home/styles/reset.css
@@ -1,12 +1,11 @@
 * {box-sizing: border-box;}
 body,html,
-h1,h2,h3,h4,h5,h6,
+h1,h2,h3,h4,h5,h6,fieldset,
 p,ul,ol,li,dl,dt,dd, table, tr,td ,th, thead, tbody, tfoot,
 div, header,nav,aside,article,section,footer,figure,
 address,blockquote,video,iframe,hr,
 span, em, strong,q,a,sup,sub,details,figcaption,summary,time,s,del,code,mark,img {
-    font-size: 1.0em;
-    font-weight: normal;
+    font-size: 1.0em; font-weight: normal;
     font-style: normal;
     line-height: 1.0; margin: 0; padding: 0;
 } 
@@ -15,4 +14,3 @@ ul,ol,li {list-style: none;}
 table,tr,td,th {border-collapse: collapse;}
 th {text-align: left;}
 fieldset {border: 0;}
-.skip {display: none;}
