--- a/css_study/project_table/styles/index.css
+++ b/css_study/project_table/styles/index.css
@@ -20,6 +20,11 @@ main .t1 thead tr .align ,
 main .t1 tbody tr .align {text-align: center;}
 main .t1 tr *{padding-top: 15px; padding-bottom: 15px;}
 main .detail_view  {text-align: right; width: 930px;display: inline-block; padding-top: 10px;}
-main .btm {padding-top: 165px; text-align: center; } 
-main .btm a{ background-color: #03C75A; font-size: 1.25rem; border-radius: 30px;
-            padding: 20px 40px 20px 40px; color: white;} 
+main .btm {padding-top: 165px; width: 930px; text-align: center; } 
+main .btm a{ background-color: #03C75A; font-size: 1.25rem; border-radius: 33px;
+            padding: 20px 40px 20px 40px; color: white; } 
+            /* a태그는 inline, block 특징을 모두 가질 수 있지만 고유한 기본 속성은
+            inline 이기 때문에 표시속성 display 명령으로 block으로 변경하지 않는한 크기. 여백
+            을 제대로 인식하지 못한다 */
+            /* line-height는 글자가 한 줄 일때 높이가 정해진 레이아웃에서 수직중앙으로
+            배치하고자 하는 경우 px단위를 사용해서 적용한다 */
