--- a/project_home/styles/kurly_join.css
+++ b/project_home/styles/kurly_join.css
@@ -3,24 +3,50 @@
 ::-webkit-scrollbar-thumb:hover {background-color: #555;}
 main, html{background-color: #f5f5f5; padding-left: 206px;}
 main {font-family: "noto sans kr", "맑은고딕",sans-serif; background-color: #f5f5f5; width: 820px;}
-main h1 {text-align: center; margin: 41px 0;
-}
+main h1 {text-align: center; margin: 41px 0;}
 main .law {height: 200px; background-color: white; overflow: auto; width: 612px; margin-bottom: 54px;}
 main .law h2, h3, p{font-size: 0.75rem; line-height: 160%; letter-spacing: 0.2%; padding-right: 100px; padding-left: 10px;}
 main .law h2 {padding-top: 10px; padding-bottom: 40px;}
 main .law h3 {padding-bottom: 4px;}
 main .law p {padding-bottom: 20px;}
-main #join_frm {}
-main #join_frm .user_info { }
-main #join_frm .user_info dl { }
-main #join_frm .user_info dl dt {margin-bottom: 18.5px; float: left; width: 158px;}
-main #join_frm .user_info dl dd {float: left; }
-main #join_frm .user_info dl dd input {width: 300px; height: 40px; margin-bottom: 10px;}
-main #join_frm .user_info dl dd button { width: 120px; height: 40px; }
-main #join_frm .user_info dl dt span {color: red;}
-main #join_frm .user_info dl dt dd:nth-child(2) {float: left;}
+ /* dt이름들 */
+main #join_frm .user_info dl dt { float: left; width: 156px;  line-height: 35px;}
+main #join_frm .user_info dl dd {float: left; width: 300px; height: 40px;}
+main #join_frm .user_info dl dd:nth-child(3n) {float: right; width: 156px; text-align: right;}
+/* dd */
+main #join_frm .user_info dl dd input {padding-left: 10px; width: 300px; height: 40px;  border-radius: 5px; border: 1px solid #aaa;} 
+main #join_frm .user_info dl dd  {margin-bottom: 10px;} 
+/* 버튼 */
+main #join_frm .user_info dl dd button { width: 120px; height: 40px; border-radius: 5px;
+background-color: #9E00B7; color: white; border: none;}
+main #join_frm .user_info dl dt span {color:red} /* 필수 */
+main #join_frm .user_info dl dt dd:nth-child(2) {float: left;}  
 main #join_frm .user_info dl dt dd:nth-child(3) {float: right;}
-main  #join_frm .user_info input[name=phone]{ width: 245px;}
-main #join_frm .user_info dl dd select{width: 50px; height: 40px;}
-
-main #join_frm .user_info .join {}
+/* 휴대폰 */
+main #join_frm .user_info input[name=phone]{margin-left: 5px; width: 245px; float: right;} /* 휴대폰 번호 입력 */
+ /* kt */
+main #join_frm .user_info dl dd select{width: 50px; height: 40px;  border-radius: 5px; border: 1px solid #aaa; appearance: none; background-image: url(../images/arrow_drop_down.svg);background-repeat: no-repeat;  padding-left: 10px;
+background-position: 30px 13px;}
+/* 주소검색 */
+main #join_frm .user_info dl dt:nth-of-type(7)+dd {padding-bottom: 60px;}
+main #join_frm .user_info #address { width: 300px; border: 1px solid #9E00B7; background-color: white; color: black; height: 43px; margin-bottom: 5px;}
+main #join_frm .user_info dl dd:nth-child(20) {width: 300px;}
+/* 배송지 따라 달라짐 */
+main #join_frm .user_info dl .change {font-size: 0.875rem; color: #aaa; margin-bottom: 5px;}
+/* 인증번호받기 */
+main #join_frm .user_info dl #duplications {background-color: #ccc; border: none;}
+/* 성별 */
+main #join_frm .user_info dl dd input[name=gender] {display: none;}
+main #join_frm .user_info dl dd input[name=gender]:checked+label { background-image: url(../images/gender_checke.svg); }
+main #join_frm .user_info dl dd label {background-image: url(../images/gender_unchecked.svg); background-repeat: no-repeat; margin-right: 30px; display: inline-block; padding-left: 20px; height: 40px; } 
+main #join_frm .user_info dl dt:nth-of-type(8)+dd{text-align: center; padding-top: 10px;}
+main #join_frm .user_info dl dt:nth-of-type(8) {clear: both;}
+/* 생년월일 */
+main #join_frm .user_info dl dd input[name^=bir] { width: 50px; height: 20px; font-size: 0.875rem; border: none;}
+main #join_frm .user_info dl dd input[name^=bir]+span{}
+/* yyyymmdd */
+main #join_frm .user_info dl dt:last-of-type + dd {background-color: #fff; width: 300px; border: 1px solid #9E00B7; height: 40px; border-radius: 5px; text-align: center; padding: 10px 0;}
+/* main #join_frm .user_info dl dt:last-of-type + dd */
+  /* 가입하기 */
+main #join_frm .user_info .join {text-align: center;}
+main #join_frm .user_info .join button{width: 200px; height: 40px; background-color: #9E00B7; color: white; border-radius: 5px; margin-top: 54px;}
